// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<bolt-stack> component basic usage 1`] = `
<bolt-stack>
  <div class="c-bolt-stack"
       is="shadow-root"
  >
    This is one stack. A stack spans the full width of its parent container.
  </div>
</bolt-stack>
<bolt-stack>
  <div class="c-bolt-stack"
       is="shadow-root"
  >
    This is another stack.
  </div>
</bolt-stack>
`;

exports[`<bolt-stack> component outer CSS class via Drupal Attributes 1`] = `
<bolt-stack class="u-bolt-color-teal">
  <div class="c-bolt-stack"
       is="shadow-root"
  >
    This is a stack
  </div>
</bolt-stack>
`;

exports[`<bolt-stack> component stack spacing: large 1`] = `
<bolt-stack>
  <div class="c-bolt-stack"
       is="shadow-root"
  >
    This is one stack. A stack spans the full width of its parent container.
  </div>
</bolt-stack>
<bolt-stack>
  <div class="c-bolt-stack"
       is="shadow-root"
  >
    This is another stack.
  </div>
</bolt-stack>
`;

exports[`<bolt-stack> component stack spacing: medium 1`] = `
<bolt-stack>
  <div class="c-bolt-stack"
       is="shadow-root"
  >
    This is one stack. A stack spans the full width of its parent container.
  </div>
</bolt-stack>
<bolt-stack>
  <div class="c-bolt-stack"
       is="shadow-root"
  >
    This is another stack.
  </div>
</bolt-stack>
`;

exports[`<bolt-stack> component stack spacing: none 1`] = `
<bolt-stack>
  <div class="c-bolt-stack"
       is="shadow-root"
  >
    This is one stack. A stack spans the full width of its parent container.
  </div>
</bolt-stack>
<bolt-stack>
  <div class="c-bolt-stack"
       is="shadow-root"
  >
    This is another stack.
  </div>
</bolt-stack>
`;

exports[`<bolt-stack> component stack spacing: small 1`] = `
<bolt-stack>
  <div class="c-bolt-stack"
       is="shadow-root"
  >
    This is one stack. A stack spans the full width of its parent container.
  </div>
</bolt-stack>
<bolt-stack>
  <div class="c-bolt-stack"
       is="shadow-root"
  >
    This is another stack.
  </div>
</bolt-stack>
`;

exports[`<bolt-stack> component stack spacing: xlarge 1`] = `
<bolt-stack>
  <div class="c-bolt-stack"
       is="shadow-root"
  >
    This is one stack. A stack spans the full width of its parent container.
  </div>
</bolt-stack>
<bolt-stack>
  <div class="c-bolt-stack"
       is="shadow-root"
  >
    This is another stack.
  </div>
</bolt-stack>
`;

exports[`<bolt-stack> component stack spacing: xsmall 1`] = `
<bolt-stack>
  <div class="c-bolt-stack"
       is="shadow-root"
  >
    This is one stack. A stack spans the full width of its parent container.
  </div>
</bolt-stack>
<bolt-stack>
  <div class="c-bolt-stack"
       is="shadow-root"
  >
    This is another stack.
  </div>
</bolt-stack>
`;
